# MAESTRO

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: __init__.py  train.yaml
data/: __init__.py  cytof_dataset.py
data/metadata/allof/: all-metadata.csv
data/metadata/amp/: files-manifest.csv  labels-per-subject.csv
jobs/: train-maestro.slurm
models/: MAESTRO.py  __init__.py
notebooks/: 01-inventory-original-allof-prepro.ipynb  02-explore-original-allof-prepro-cells.ipynb  analyze-maestro-results.ipynb
scripts/: train-maestro.py  train-maestro.sh
src/: __init__.py  hydra_cli.py
src/data/: __init__.py  dataset.py
src/maestro/: __init__.py
src/maestro/data/: __init__.py  dataset.py
src/maestro/models/: __init__.py  maestro.py
src/maestro/training/: __init__.py  callbacks.py  cli.py  runner.py
src/models/: __init__.py  maestro.py
src/training/: __init__.py  callbacks.py  cli.py  runner.py
tests/: __init__.py  test_compatibility.py  test_hydra_config.py
