[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-immune"
version = "0.1.0"
description = "Patient-level immune representations from cytometry cell sets"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "colormaps==0.4.2",
    "deepspeed==0.19.2 ; sys_platform == 'linux'",
    "entmax>=1.3",
    "geomloss>=0.2.6",
    "h5py>=3.11",
    "hydra-core==1.3.2",
    "lightning==2.4.0",
    "llvmlite==0.43.0",
    "matplotlib==3.9.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "pykeops>=2.2",
    "pytorch-lightning==2.4.0",
    "torch==2.7.1",
    "umap-learn==0.5.7",
    "wandb>=0.21,<1",
]

[project.scripts]
maestro-run = "src.hydra_cli:main"
maestro-train = "src.training.cli:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.setuptools.packages.find]
where = ["."]
include = ["configs", "src", "src.*"]

[tool.setuptools.package-data]
configs = ["**/*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ANN", "B", "D", "E", "F", "I", "N", "SIM", "UP"]
ignore = ["D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["ANN201", "D103", "E402", "T201"]
"src/models/maestro.py" = ["N803", "N806"]
"src/training/callbacks.py" = ["N802"]

[dependency-groups]
analysis = [
    "jupyter>=1.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "tqdm==4.66.5",
]
dev = [
    "ipykernel>=7.3.0",
    "pre-commit>=4.2",
    "pytest>=9.1.1",
    "ruff>=0.12.4",
]
